script file completed. Calculator works as inteded. I added operation text to display the operator you are using. May mess with the css a bit to make it less static.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
         <div class="display">
             <div id="displayText">---</div>
         </div>
-
-        <div class="topButtons">
-            <div id="clear" class="button text">CLEAR</div>
-            <div id="delete" class ="button text">⌫</div>
+        <div class="topSection">
+            <div id="operationText" class="text">Operation: </div>
+            <div class="topButtons">
+                <div id="clear" class="button text">CLEAR</div>
+                <div id="delete" class ="button text">⌫</div>
+            </div>
         </div>
 
         <div class="mainButtons">
@@ -34,7 +36,7 @@
             <div class="number button text">2</div>
             <div class="number button text">3</div>
             <div class="operator button text">-</div>
-            <div class="operator button text">.</div>
+            <div id="decimal" class="number button text">.</div>
             <div class="number button text">0</div>
             <div id="equal" class="operator button text">=</div>
             <div class="operator button text">+</div>
